z-index issue fixed

--- a/assets/styles/table.css
+++ b/assets/styles/table.css
@@ -5,7 +5,7 @@
   top: 7.9rem;
   right: 0;
   background-color: white;
-  z-index: 10;
+ 
   overflow: scroll;
  display: none;
  
@@ -53,7 +53,7 @@
   margin: 0;
   border-spacing: 0;
   margin: auto;
-  z-index: 555;
+ 
   color:black
   
 }
